--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="/public/main.css" />
     <title>Ad</title>
   </head>
   <body>
-    <h1>5</h1>
+    <header><h1>new James Bond Action Figure</h1></header>
+
+    <article>
+      <div>
+        <div class="imgDiv">
+          <p>"You ever hate how our action figures are just so old"</p>
+          <img src="/public/Images/Boy1.jpg" alt="Boy1" id="SmallImg" />
+        </div>
+        <div class="imgDiv">
+          <p>"Yeah Billy I really do"</p>
+          <img src="/public/Images/Boy2.png" alt="Boy2" id="SmallImg" />
+        </div>
+      </div>
+    </article>
+    <header><h3>Well Now You Can put your hate to bed.</h3></header>
+    <article>
+      <div>
+        <img src="/public/Images/Bond.jpg" alt="James Bond" id="MediumImg" />
+        <img src="/public/Images/bondno9.jpg" alt="James Bond" id="MediumImg" />
+        <p id="EndArticleP">
+          "Look Billy Its like im really him," <br />
+          "Shaken Not Stirred", <br />
+          "Wowee Tommy you really sound like him"
+        </p>
+      </div>
+    </article>
+
+    <footer></footer>
   </body>
 </html>
