--- a/Public/index.html
+++ b/Public/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="imgDiv">
           <p>"Yeah Billy I really do"</p>
-          <img src="/img/Boy2.png" alt="Boy2" id="SmallImg" />
+          <img src="/img" alt="Boy2" id="SmallImg" />
         </div>
       </div>
     </article>
